--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,696 @@
+:root {
+    --color: #27c7ab;
+}
 
+* {
+    box-sizing: border-box;
+}
+
+h1,
+p {
+    margin: 0;
+}
+
+.container {
+    max-width: 1050px;
+    margin: 0 auto; /*wszedzie taki sam poczatek*/
+}
+
+.btn {
+    background: var(--color);
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    padding: 5px 15px;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: inline-block; /* dla buttona*/
+}
+
+.btn:hover {
+    background:#27c7acaf;
+    transition: 0.3s;
+}
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+  }
+
+.section-title {
+    font-size: 22px;
+    color: #666;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+.section-title::after {
+    content: "";
+    width: 320px;
+    height: 8px;
+    background: var(--color);
+    display: block;
+    margin-top: 5px;
+}
+body {
+    font-family: 'Raleway', sans-serif;
+}
+/* -------------------------------------------- */
+/* Header */
+/* -------------------------------------------- */
+
+.page-header{
+    height: 40px;
+    background: #000;
+    position: relative;
+    z-index: 1000;
+}
+
+.page-header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.page-logo{
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.page-logo-link{
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.page-logo-link span {
+    color: var(--color);
+}
+
+.page-nav {}
+
+.page-nav-list{
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.page-nav-list-el{
+    position: relative;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-nav-list-link{
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 25px;
+    transition: 0.3s color;
+}
+
+.page-nav-list-link:hover {
+    color: var(--color);
+}
+
+.page-nav-sublist{
+    background: #000;
+    position: absolute;
+    top: calc(100% + 12px);
+    left: 50%;
+    transform: translate(-50%);
+    margin: 0;
+    padding: 10px 15px;
+    list-style: none;
+    opacity: 0; /*chowanie*/
+    visibility: hidden;
+    transition: 0.3s opacity;
+}
+
+.page-nav-list-el:hover .page-nav-sublist{
+    opacity: 1;
+    visibility: visible; /*rozwijanie*/
+}
+
+.page-nav-sublist::before {
+    content: "";
+    width: 0;
+    height: 0;
+    border: 10px solid transparent;
+    border-bottom-color:#000;
+    position: absolute;
+    top: -20px;
+    left: 50%; /*pozycja rodzica*/
+    transform: translate(-50%); /*wzgledem danego elementu*/
+}
+
+.page-nav-sublist::after {
+    content: "";
+    width: 100%;
+    height: 12px;
+    background: transparent;
+    position: absolute;
+    left: 0;
+    top: -12px;
+}
+
+.page-nav-sublist-el{}
+
+.page-nav-sublist-link{
+    color: #fff;
+    text-decoration: none;
+    padding: 3px;
+    display: block;
+}
+
+/* -------------------------------------------- */
+/* Slider */
+/* -------------------------------------------- */
+
+.main-slider-bg{
+    background: linear-gradient(#fff, #ddd);
+}
+
+.slider{
+    height: 500px;
+    display: flex;
+}
+
+.slider-prev,
+.slider-next{
+    width: 90px;
+    border: 0;
+    background: none;
+    color: var(--color);
+    font-size: 60px;
+    cursor: pointer;
+    outline: none;
+}
+
+.slider-prev:focus,
+.slider-next:focus {
+    color: black;
+}
+
+.slider-next{
+    order: 1;
+}
+
+.slider-slides{
+    background: transparent;
+    flex-grow: 1;
+    position: relative;
+}
+
+.slider-slide{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 1s opacity;
+
+    font-size: 100px;
+}
+
+.slider-slide-active{
+    opacity: 1;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.slide-left {
+    height: 100%;
+    width: 400px;
+    background: url(../images/black_chair.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.slide-right {
+    height: 100%;
+    width: 470px;
+}
+
+.slide-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.slide-right-title {
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.slide-right-title span {
+    color: var(--color);
+}
+
+.slide-right-text {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 35px;
+    line-height: 1.5;
+}
+
+.slide-see-more {
+    width: 260px;
+    height: 50px;
+    font-size: 24px;
+}
+
+
+/* -------------------------------------------- */
+/* main articles list */
+/* -------------------------------------------- */
+
+.articles-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.article-1 {
+    height: 225px;
+    width: 330px;
+    margin: 30px 0 95px 0;
+    background-image: url(../images/box1_img.jpg);
+    display: flex;
+    position: relative;
+    align-content: flex-end;
+}
+
+.article-2 {
+    height: 225px;
+    width: 330px;
+    margin: 30px 0 95px 0;
+    background-image: url(../images/box2_img.jpg);
+    display: flex;
+}
+.article-3 {
+    height: 250px;
+    width: 340px;
+    margin: 30px 0 70px 0;
+    border: #dbdbdb solid 1px;
+    position: relative;
+    display: flex;
+    
+}
+
+.article-1-title,
+.article-2-title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000;
+    width: 330px;
+    padding-left: 20px;
+    padding-bottom: 30px;
+    padding-top: 15px;
+    background: rgba(255,255,255,0.4);
+    position: absolute;
+    margin-top: 140px;
+}
+
+.article-3-title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000;
+    width: 340px;
+    padding-left: 20px;
+    position: absolute;
+    margin-top: 25px;
+}
+
+.article-1-title::after,
+.article-2-title::after,
+.article-3-title::after {
+    content: "";
+    width: 140px;
+    height: 7px;
+    background: var(--color);
+    display: block;
+    margin-top: 5px;
+    
+}
+
+.article-1-title span,
+.article-2-title span {
+    text-transform: uppercase;
+}
+
+.article-3-text {
+        font-size: 16px;
+        font-weight: 200;
+        color: #666;
+        padding-top: 65px;
+        padding-left: 20px;
+        padding-bottom: 45px;
+        padding-right: 30px;
+        position: absolute;
+}
+
+/* -------------------------------------------- */
+/* Offer */
+/* -------------------------------------------- */
+
+.main-prices-list {
+    background-color: #F1F1F1;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-prices-list .section-title {
+    padding-top: 50px;
+    font-size: 22px;
+    color: #666;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.section-title:after {
+    content: "";
+    width: 320px;
+    height: 8px;
+    background-color: var(--color);
+    display: block;
+}
+
+.box {
+    position: relative;
+    font-family: Arial, sans-serif;
+    width: 333px;
+    height: 500px;
+    margin: 50px auto;
+    border: 1px solid #D7D7D7;
+    text-align: center;
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+}
+
+.main-prices-list .row .col-1-3 .box:first-of-type {
+    background-color: #F9F9F9;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box {
+    background-color: #27C6AA;
+}
+
+.main-prices-list .row .col-1-3:nth-child(3) .box {
+    background-color: #F9F9F9;
+}
+
+.box::before {
+    content:"";
+    position: absolute;
+    top: -2%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    border: 1px solid #D7D7D7;
+    border-radius: 50%;
+    z-index: 2;
+    background: #BDBDBD;
+    box-shadow: inset 0 0 0 13px #fff;
+}
+
+
+.main-prices-list .row .col-1-3:nth-child(2) .box:before {
+    border: 1px solid #27C6AA;
+    background: #fff;
+    box-shadow: inset 0 0 0 13px #27C6AA;
+}
+
+.box-title {
+    margin-bottom: 30px;
+    color:#27C6AA;
+    text-transform: uppercase;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box-title {
+    color: #fff;
+}
+
+
+.box-price {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 1px solid #D7D7D7;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #BBBBBB;
+    font-size: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box-price {
+    border: 1px solid #fff;
+    background-color: #fff;
+    color: #24ba9f;
+}
+
+.box-price:after {
+    font-size: 15px;
+    content: "PLN/MSC";
+    position: absolute;
+    font-weight: bold;
+    top: 63%;
+    left: 20%;
+}
+
+sup {   
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+    
+}
+
+sup {
+  top: -0.5em;
+}
+  
+.box-ul {
+    color: #A3A3A3;
+    padding: 0;
+    width: 100%;
+    
+}
+
+.box-ul li {
+    background-color: #E3E3E3;
+    padding: 10px 0;
+    display: block;    
+}
+
+.box-ul li:nth-child(2n+2) {
+    background-color: #F1F1F1;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box-ul li:nth-child(2n+1) {
+    background-color: #F1F1F1;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box-ul li:nth-child(2n+2) {
+    background-color: #E3E3E3;
+}
+
+.box-btn {
+    display: inline-block;    
+    font-size: 12px;
+    color: white;
+    background-color: #27C6AA;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 10px 30px;
+    border-radius: 5px;
+}  
+
+.main-prices-list .row .col-1-3:first-child .box-btn {
+    margin-top: 113px;
+}
+
+.main-prices-list .row .col-1-3:nth-child(2) .box-btn {
+    margin-top: 70px;
+}
+
+.main-prices-list .row .col-1-3:nth-child(3) .box-btn {
+    margin-top: 35px;
+}
+
+/* -------------------------------------------- */
+/* Contact form */
+/* -------------------------------------------- */
+
+.form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-left{
+    width: 635px;
+}
+.form-right{
+    width: 340px;
+}
+.form-row{
+    margin-bottom: 30px;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form textarea {
+    height: 65px;
+    border: 1px solid var(--color);
+    width: 100%;
+    padding: 0 15px;
+    font-size: 33px;
+    font-weight: 200;
+    outline: none;
+}
+
+.form input[type="text"]:focus,
+.form input[type="email"]:focus,
+.form textarea:focus {
+    box-shadow: inset 0 0 0 1px var(--color);
+}
+.form input[type="text"]::placeholder,
+.form input[type="email"]::placeholder,
+.form textarea::placeholder {
+    color: #aaa;
+}
+
+.form textarea {
+    height: 190px;
+    padding: 15px;
+    resize: none;
+}
+
+.form-img {
+    height: 210px;
+    background: url(../images/red_chair.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: -30px;
+}
+
+.form-checkbox{
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    margin: 35px 0 40px;
+
+}
+.form-checkbox input{
+    
+}
+.form-checkbox input + .form-checkbox-mark {
+    width: 48px;
+    height: 48px;
+    border: 1px solid var(--color);
+    display: block;
+    flex-shrink: 0; /*zeby sie nie zmniejszal*/
+    margin-right: 10px;
+}
+
+.form-checkbox input:checked + .form-checkbox-mark{
+    background: url(../images/form_ok.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.form-checkbox-text{
+    color: #aaa;
+}
+
+.form-submit {
+    font-size: 34px;
+    font-weight: bold;
+    height: 70px;
+    width: 100%;
+}
+
+
+/* -------------------------------------------- */
+/* Footer */
+/* -------------------------------------------- */
+
+.page-footer {
+    padding: 20px;
+    background: #fff;
+}
+
+.page-footer .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.page-footer-copyright {
+    color: #9b9b9b;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    
+}
+
+.page-footer-bar {
+    display: flex;
+}
+.page-footer-nav {
+    display: flex;
+}
+.page-footer-nav-list {
+    list-style: none;
+    display: flex;
+    list-style: none;
+    /* padding: 0;
+    margin: 0; */
+}
+
+.page-footer-nav-list a {
+    padding: 0 5px;
+}
+
+.page-footer-bar .page-logo {
+    color: #9b9b9b;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 20px;
+    display: flex;
+    padding-left: 65px;
+}
+
+.page-footer-bar .page-logo span {
+    font-weight: bold;
+}
